<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.feature.signup.view.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/stock_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:alpha="0.3"
            android:fontFamily="@font/poppins"
            android:text="@string/stock_signal"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/welcome_sign_up"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/stock_signal" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="96dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_input_rect"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/welcome_msg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:passwordToggleDrawable="@drawable/custom_visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_visibility_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input_rect"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="21dp"
                android:paddingTop="14dp"
                android:paddingEnd="21dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:passwordToggleDrawable="@drawable/custom_visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_visibility_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_input_rect"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingStart="21dp"
                android:paddingTop="14dp"
                android:paddingEnd="21dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_input_rect"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/repeat_password" />

        <CheckBox
            android:id="@+id/accept18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:button="@drawable/custom_checkbox"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/accept_that_i_m_18_or_older"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_button_rect"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/accept18" />

        <TextView
            android:id="@+id/goto_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in_i_already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/signup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
