<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stock_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:text="@string/stock_signal"
        android:textColor="@color/white"
        android:layout_marginTop="92dp"
        android:alpha="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="36sp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stock_signal" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_input_rect"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="96dp"
        android:inputType="textEmailAddress"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:hint="@string/e_mail"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_input_rect"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:hint="@string/password"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_input_rect"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:hint="@string/repeat_password"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeat_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/repeat_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_input_rect"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:hint="@string/name"
        android:inputType="text" />

</androidx.constraintlayout.widget.ConstraintLayout>