<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.feature.signin.view.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/back_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/ic_chevron_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stock_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:alpha="0.3"
            android:fontFamily="@font/poppins"
            android:text="@string/stock_signal"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/welcome_sign_in"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/stock_signal" />

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="243dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_input_rect"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="21dp"
            android:paddingEnd="21dp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/welcome_msg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/email_sign_in"
            app:passwordToggleDrawable="@drawable/custom_visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_visibility_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input_rect"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="21dp"
                android:paddingTop="14dp"
                android:paddingEnd="21dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signin"
            android:layout_width="0dp"
            android:layout_height="66dp"
            android:layout_marginTop="95dp"
            android:background="@drawable/bg_button_rect"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/password_sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/password_sign_in" />

        <TextView
            android:id="@+id/goto_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/signin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
